# stack-depth-analyzer

./: .gitignore  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  README.md  build.sh  index.html  run.sh  server.py
include/: StackAnalyzer.h
lib/: CallChainAnalyzer.cpp  StackFrameEstimator.cpp
test/: simple_test.c
testcases/: test_deep_chain.c  test_freertos.sh  test_large_buffers.c  test_multiple_paths.c  test_no_overflow.c  test_recursion.c  test_simple.c
tools/: stack-analyzer.cpp
